--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "generic_wf_sim"]
-	path = generic_wf_sim
-	url = git@github.com:ecbtln/generic_wf_sim.git
+[submodule "dynamics_sim"]
+	path = dynamics_sim
+	url = git@github.com:ecbtln/dynamics_sim.git
